--- a/TestWebApp/src/main/webapp/WEB-INF/web.xml
+++ b/TestWebApp/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,8 @@
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>
-				classpath:/spring-webutils-context.xml
+				classpath:/spring-webutils-context.xml,
+				classpath:/spring-test-context.xml
 			</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
