--- a/TestWebApp/src/main/webapp/WEB-INF/web.xml
+++ b/TestWebApp/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,7 @@
 
 	<servlet-mapping>
 		<servlet-name>springFrontController</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>/api/*</url-pattern>
 	</servlet-mapping>
 	
 	
