--- a/Services/pom.xml
+++ b/Services/pom.xml
@@ -36,17 +36,17 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.5.0</version>
 		</dependency>
-		
+
 		<!-- Hibernate Validator -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>4.2.0.Final</version>
+			<version>5.1.3.Final</version>
 		</dependency>
 
-		<!-- Used by class scanning services which in turn is used
-				to load repositories, actions, models, etc
-		 -->
+
+		<!-- Used by class scanning services which in turn is used to load repositories, 
+			actions, models, etc -->
 		<dependency>
 			<groupId>org.reflections</groupId>
 			<artifactId>reflections</artifactId>
@@ -56,7 +56,7 @@
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
-			<version>1.0.0.GA</version>
+			<version>1.1.0.Final</version>
 		</dependency>
 
 		<dependency>
