--- a/TestWebApp/pom.xml
+++ b/TestWebApp/pom.xml
@@ -8,6 +8,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>com.yukthi.webutils</groupId>
 			<artifactId>Services</artifactId>
 			<version>1.0</version>
