--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>Client</artifactId>
+	<artifactId>webutils-client</artifactId>
 	<packaging>jar</packaging>
 
 	<name>Client</name>
@@ -21,7 +21,7 @@
 		
 		<dependency>
 			<groupId>com.yukthi.webutils</groupId>
-			<artifactId>commons</artifactId>
+			<artifactId>webutils-commons</artifactId>
 			<version>1.0</version>
 		</dependency>
 	</dependencies>
