--- a/Commons/pom.xml
+++ b/Commons/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>commons</artifactId>
+	<artifactId>webutils-commons</artifactId>
 	<packaging>jar</packaging>
 
 	<name>commons</name>
