--- a/TestWebApp/pom.xml
+++ b/TestWebApp/pom.xml
@@ -18,6 +18,13 @@
 			<artifactId>webutils-services</artifactId>
 			<version>1.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.4</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<parent>
