Excluding test classes from artifact

--- a/Commons/pom.xml
+++ b/Commons/pom.xml
@@ -36,6 +36,21 @@
 		</dependency>
 	</dependencies>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<excludes>
+						<include>com/test/**</include>
+					</excludes>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 	<parent>
 		<groupId>com.yukthi.webutils</groupId>
 		<artifactId>WebUtils</artifactId>
