--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -23,20 +23,20 @@
 		<dependency>
 			<groupId>com.yukthi</groupId>
 			<artifactId>yukthi-utils</artifactId>
-			<version>1.0</version>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>com.yukthi.webutils</groupId>
 			<artifactId>webutils-commons</artifactId>
-			<version>1.0</version>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
 	<parent>
 		<groupId>com.yukthi.webutils</groupId>
 		<artifactId>WebUtils</artifactId>
-		<version>1.0</version>
+		<version>1.0-SNAPSHOT</version>
 		<relativePath>../WebUtils</relativePath>
 	</parent>
 </project>
