--- a/Commons/pom.xml
+++ b/Commons/pom.xml
@@ -22,17 +22,17 @@
 		<dependency>
 			<groupId>com.yukthi</groupId>
 			<artifactId>yukthi-validators</artifactId>
-			<version>1.0</version>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.yukthi</groupId>
 			<artifactId>yukthi-data-mapping</artifactId>
-			<version>1.0</version>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.yukthi</groupId>
 			<artifactId>yukthi-utils</artifactId>
-			<version>1.0</version>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
@@ -56,7 +56,7 @@
 	<parent>
 		<groupId>com.yukthi.webutils</groupId>
 		<artifactId>WebUtils</artifactId>
-		<version>1.0</version>
+		<version>1.0-SNAPSHOT</version>
 		<relativePath>../WebUtils</relativePath>
 	</parent>
 </project>
