--- a/Services/pom.xml
+++ b/Services/pom.xml
@@ -117,24 +117,24 @@
 		<dependency>
 			<groupId>com.yukthi</groupId>
 			<artifactId>yukthi-data</artifactId>
-			<version>1.0</version>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.yukthi</groupId>
 			<artifactId>yukthi-utils</artifactId>
-			<version>1.0</version>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.yukthi</groupId>
 			<artifactId>yukthi-excel-reports</artifactId>
-			<version>1.0</version>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
 
 		<dependency>
 			<groupId>com.yukthi.webutils</groupId>
 			<artifactId>webutils-commons</artifactId>
-			<version>1.0</version>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
@@ -152,7 +152,7 @@
 	<parent>
 		<groupId>com.yukthi.webutils</groupId>
 		<artifactId>WebUtils</artifactId>
-		<version>1.0</version>
+		<version>1.0-SNAPSHOT</version>
 		<relativePath>../WebUtils</relativePath>
 	</parent>
 </project>
