--- a/WebUtils/pom.xml
+++ b/WebUtils/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.yukthi.webutils</groupId>
 	<artifactId>WebUtils</artifactId>
-	<version>1.0</version>
+	<version>1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>WebUtils</name>
