Added support for mail template config

--- a/TestWebApp/src/main/resources/app-config.properties
+++ b/TestWebApp/src/main/resources/app-config.properties
@@ -4,3 +4,4 @@ webutils.mail.smtp.port=25
 webutils.mail.smtp.user=dev@yukthi-tech.co.in
 webutils.mail.smtp.password=development@123
 webutils.mail.smtp.enableTtls=false
+app.bootstrap.files=test.json
