Added code for sending and receiving mails.

--- a/TestWebApp/src/main/resources/app-config.properties
+++ b/TestWebApp/src/main/resources/app-config.properties
@@ -1,2 +1,4 @@
 #Mail service related configuration
 app.bootstrap.files=test.json
+app.work.dir=.
+app.email.cleanup.paths=//div[class="gmail_extra"],//p[contains(text(),'From:')]/following-sibling::p
