--- a/Services/pom.xml
+++ b/Services/pom.xml
@@ -91,14 +91,20 @@
 			<artifactId>reflections</artifactId>
 			<version>0.9.9-RC2</version>
 		</dependency>
-		
+
 		<!-- Email related dependencies -->
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
 			<version>1.4.7</version>
 		</dependency>
-		
+
+		<!-- Jsoup for html parsing. Used for html processing in email body. -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.8.3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>javax.validation</groupId>
