DB Based Session Token + Background thread support + user notifications

--- a/TestWebApp/src/main/resources/app-config.properties
+++ b/TestWebApp/src/main/resources/app-config.properties
@@ -2,3 +2,5 @@
 app.bootstrap.files=test.json
 app.work.dir=.
 app.email.cleanup.paths=//div[class="gmail_extra"],//p[contains(text(),'From:')]/following-sibling::p
+webutils.session.timeOut.inSecs=300
+webutils.session.updateGap.inSecs=60
