--- a/Commons/pom.xml
+++ b/Commons/pom.xml
@@ -36,22 +36,19 @@
 		</dependency>
 	</dependencies>
 
-	<!--  
 	<build>
 		<plugins>
+			<!-- Sets the java compiler version for the project -->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.6</version>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
 				<configuration>
-					<excludes>
-						<include>com/test/**</include>
-					</excludes>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-	-->
 	
 	<parent>
 		<groupId>com.yukthitech.webutils</groupId>
