--- a/Services/pom.xml
+++ b/Services/pom.xml
@@ -100,6 +100,10 @@
 					<artifactId>httpmime</artifactId>
 					<groupId>org.apache.httpcomponents</groupId>
 				</exclusion>
+				<exclusion>
+					<artifactId>commons-lang</artifactId>
+					<groupId>commons-lang</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 
