--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -28,10 +28,22 @@
 
 		<dependency>
 			<groupId>com.yukthitech</groupId>
+			<artifactId>yukthi-free-marker</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.yukthitech</groupId>
 			<artifactId>yukthi-utils</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.yukthitech</groupId>
+			<artifactId>yukthi-xml-mapper</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
