--- a/Commons/pom.xml
+++ b/Commons/pom.xml
@@ -34,6 +34,11 @@
 			<artifactId>yukthi-utils</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.yukthitech</groupId>
+			<artifactId>yukthi-xml-mapper</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
