--- a/Services/pom.xml
+++ b/Services/pom.xml
@@ -108,6 +108,10 @@
 					<artifactId>commons-lang</artifactId>
 					<groupId>commons-lang</groupId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.ow2.asm</groupId>
+					<artifactId>asm</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 
@@ -151,12 +155,7 @@
 		<dependency>
 			<groupId>com.yukthitech</groupId>
 			<artifactId>yukthi-data</artifactId>
-			<version>1.2.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>com.yukthitech</groupId>
-			<artifactId>yukthi-utils</artifactId>
-			<version>1.2.1-SNAPSHOT</version>
+			<version>1.3.3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.yukthitech</groupId>
