--- a/Commons/pom.xml
+++ b/Commons/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>webutils-commons</artifactId>
@@ -25,13 +24,14 @@
 		</dependency>
 		<dependency>
 			<groupId>com.yukthitech</groupId>
-			<artifactId>yukthi-utils</artifactId>
-			<version>1.3.6-SNAPSHOT</version>
+			<artifactId>yukthi-xml-mapper</artifactId>
+			<version>1.3.12-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>com.yukthitech</groupId>
-			<artifactId>yukthi-xml-mapper</artifactId>
-			<version>1.3.4-SNAPSHOT</version>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
@@ -48,7 +48,7 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<parent>
 		<groupId>com.yukthitech.webutils</groupId>
 		<artifactId>WebUtils</artifactId>
