Adding resource servlet to support ui content serving in spring boot

--- a/Services/src/main/resources/default-application.properties
+++ b/Services/src/main/resources/default-application.properties
@@ -16,3 +16,7 @@ webutils.mail.smtp.port=25
 webutils.mail.smtp.user=dummy@yukthitech.com
 webutils.mail.smtp.password=dummy
 webutils.mail.smtp.enableTtls=false
+
+## ui rendering servlet mapping path
+webutils.ui.path=*.html,*.htm,*.js,*.css,*.fnt,*.pdf,*.svg,*.gif,*.png,,*.jpeg,,*.jpg,,*.eot,*.ttf,*.woff,*.woff2,*.map
+webutils.ui.resourcesFolder=.\\web
