--- a/TestWebApp/pom.xml
+++ b/TestWebApp/pom.xml
@@ -7,12 +7,16 @@
 	<name>TestWebApp Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
 	<dependencies>
 
 		<dependency>
 			<groupId>com.yukthitech.webutils</groupId>
 			<artifactId>webutils-services</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+			<version>1.0.2-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
