--- a/TestWebApp/src/main/resources/application.properties
+++ b/TestWebApp/src/main/resources/application.properties
@@ -2,3 +2,7 @@
 app.email.cleanup.paths=//div[class="gmail_extra"],//p[contains(text(),'From:')]/following-sibling::p
 app.systemAgentName=test
 tenantSpaceBased=true
+webutils.app.base.package=com.test.yukthitech
+spring.main.allow-bean-definition-overriding=true
+#spring.main.allow-circular-references=true
+logging.config=classpath:log4j2.xml
