--- a/WebUtils/pom.xml
+++ b/WebUtils/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.yukthitech.webutils</groupId>
 	<artifactId>WebUtils</artifactId>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>WebUtils</name>
@@ -22,6 +22,9 @@
 
 		<testng.version>6.9.4</testng.version>
 		<mockito.version>1.9.5</mockito.version>
+
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
 	</properties>
 
 
@@ -112,16 +115,6 @@
 				</configuration>
 			</plugin>
 			-->
-			
-			<!-- Sets the java compiler version for the project -->
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
