Changes to support spring boot

--- a/Services/src/main/resources/default-application.properties
+++ b/Services/src/main/resources/default-application.properties
@@ -18,5 +18,9 @@ webutils.mail.smtp.password=dummy
 webutils.mail.smtp.enableTtls=false
 
 ## ui rendering servlet mapping path
-webutils.ui.path=*.html,*.htm,*.js,*.css,*.fnt,*.pdf,*.svg,*.gif,*.png,,*.jpeg,,*.jpg,,*.eot,*.ttf,*.woff,*.woff2,*.map
+webutils.ui.path=/,*.html,*.htm,*.js,*.css,*.fnt,*.pdf,*.svg,*.gif,*.png,,*.jpeg,,*.jpg,,*.eot,*.ttf,*.woff,*.woff2,*.map
 webutils.ui.resourcesFolder=.\\web
+## Uris for which auth should not be checked
+# Making root url free-url, so that welcome page can be displayed 
+webutils.ui.freeUris=/
+
