--- a/TestWebApp/src/main/resources/application.properties
+++ b/TestWebApp/src/main/resources/application.properties
@@ -6,3 +6,7 @@ webutils.app.base.package=com.test.yukthitech
 spring.main.allow-bean-definition-overriding=true
 #spring.main.allow-circular-references=true
 logging.config=classpath:log4j2.xml
+
+spring.web.resources.static-locations=file:/web
+# spring.web.resources.static-locations=classpath:/files/,classpath:/static-files
+spring.mvc.servlet.path=/api
