--- a/Services/pom.xml
+++ b/Services/pom.xml
@@ -224,6 +224,11 @@
 			<version>1.0.2-SNAPSHOT</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.yukthitech</groupId>
+			<artifactId>yukthi-simplecaptcha</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 
 	</dependencies>
 
