--- a/Services/pom.xml
+++ b/Services/pom.xml
@@ -153,11 +153,11 @@
 
 		<!-- Email related dependencies -->
 		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>mail</artifactId>
-			<version>1.4.7</version>
+			<groupId>org.eclipse.angus</groupId>
+			<artifactId>jakarta.mail</artifactId>
+			<version>2.0.3</version>
 		</dependency>
-
+		
 		<!-- Jsoup for html parsing. Used for html processing in email body. -->
 		<dependency>
 			<groupId>org.jsoup</groupId>
