--- a/webutils-common/pom.xml
+++ b/webutils-common/pom.xml
@@ -26,16 +26,19 @@
 			<groupId>com.yukthitech</groupId>
 			<artifactId>yukthi-validators</artifactId>
 			<version>1.1-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.yukthitech</groupId>
 			<artifactId>yukthi-data-mapping</artifactId>
 			<version>1.3.4-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.20.1</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
