--- a/webutils-services/pom.xml
+++ b/webutils-services/pom.xml
@@ -127,6 +127,12 @@
 			<groupId>com.github.ben-manes.caffeine</groupId>
 			<artifactId>caffeine</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>com.yukthitech</groupId>
+			<artifactId>yukthi-simplecaptcha</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 </project>
